--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
     <title>Motieno Pizzeria</title>
 </head>
 <body>
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#offers">Offers</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div> 
     <h1>Motieno Pizzeria</h1>
     
 <script src="js/scripts.js"></script>  
