adding pizza toppings section

--- a/index.html
+++ b/index.html
@@ -49,18 +49,32 @@
 
             </div>
             <div class="three col-md-3">
+                   
                 <fieldset>
                     <legend> Pizza Crust </legend>
-                    <p><label> <input type=radio name="crust" value=60> Crispy </label></p>
-                    <p><label> <input type=radio name="crust" value=50> Stuffed </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Thin Crust. </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Thick Crust Pizza. </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Flat Bread Crust. </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Cheese Crust Pizza. </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Wrapping It Up. </label></p>
+                    <p><label> <input type=radio name="crust" value=60> Cracker Crust. </label></p>
+                    <p><label> <input type=radio name="crust" value=50> Stuffed Crust </label></p>
                     <p><label> <input type=radio name="crust" value=70> Gluten-free </label></p>
                 </fieldset>
 
             </div>
+           
             <div class="three col-md-3">
                 <fieldset>
                     <legend> Pizza Toppings </legend>
+                    <p><label> <input type=radio name="topping" value=70> Pepperoni </label></p>
                     <p><label> <input type=radio name="topping" value=70> Bacon </label></p>
+                    p><label> <input type=radio name="topping" value=70> Sausage </label></p>
+                    p><label> <input type=radio name="topping" value=70> Fresh basil </label></p>
+                    p><label> <input type=radio name="topping" value=70> Tomato </label></p>
+                    p><label> <input type=radio name="topping" value=70> Fresh garlic </label></p>
+                    p><label> <input type=radio name="topping" value=70> Green pepper </label></p>
+                    p><label> <input type=radio name="topping" value=70>  Black olives </label></p>
                     <p><label> <input type=radio name="topping" value=50> Extra Cheese </label></p>
                     <p><label> <input type=radio name="topping" value=70> Onion </label></p>
                     <p><label> <input type=radio name="topping" value=40> Mushroom </label></p>
