add delivery options part

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                     <legend> Pizza Toppings </legend>
                     <p><label> <input type=radio name="topping" value=70> Pepperoni </label></p>
                     <p><label> <input type=radio name="topping" value=70> Bacon </label></p>
-                    p><label> <input type=radio name="topping" value=70> Sausage </label></p>
-                    p><label> <input type=radio name="topping" value=70> Fresh basil </label></p>
-                    p><label> <input type=radio name="topping" value=70> Tomato </label></p>
-                    p><label> <input type=radio name="topping" value=70> Fresh garlic </label></p>
-                    p><label> <input type=radio name="topping" value=70> Green pepper </label></p>
-                    p><label> <input type=radio name="topping" value=70>  Black olives </label></p>
+                    <p><label> <input type=radio name="topping" value=70> Sausage </label></p>
+                    <p><label> <input type=radio name="topping" value=70> Fresh basil </label></p>
+                    <p><label> <input type=radio name="topping" value=70> Tomato </label></p>
+                    <p><label> <input type=radio name="topping" value=70> Fresh garlic </label></p>
+                    <p><label> <input type=radio name="topping" value=70> Green pepper </label></p>
+                    <p><label> <input type=radio name="topping" value=70>  Black olives </label></p>
                     <p><label> <input type=radio name="topping" value=50> Extra Cheese </label></p>
                     <p><label> <input type=radio name="topping" value=70> Onion </label></p>
                     <p><label> <input type=radio name="topping" value=40> Mushroom </label></p>
@@ -84,8 +84,8 @@
             <div class="four col-md-3">
                 <label>Preferred delivery mode:
                     <select name="mode" id="mode">
-                        <option value="1" id="">Pick</option>
-                        <option value="2" id="">Deliver</option>
+                        <option value="1" id="">Pickup</option>
+                        <option value="2" id="">Delivery</option>
                     </select></label>
 
                 <p><label>Delivery instructions: <textarea name="comments"></textarea></label></p>
