--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <div class="row">
 
             <div class="one">
-                <h1>Motieno Pizzeria</h1>
+                <h1>Motieno Pizzeria.</h1>
+                <h3>Making People Happy</h3>
             </div>
             <label class="name">Customer name: <input type="text" id="name"></label>
             <div class="two col-md-3">
@@ -96,6 +97,6 @@
 
     </div>
     
-<script src="js/scripts.js"></script>  
+<script src="js/script.js"></script>  
 </body>
 </html>
