--- a/index.html
+++ b/index.html
@@ -151,6 +151,25 @@
 
 
     </div>
+</section>
+<div class="socialm">
+    <div><a href="twitter.com"><img src="images/social_icons/twitter.png" class="img-fluid"></a></div>
+    <div><a href="dribble.com"><img src="images/social_icons/dribble.png" class="img-fluid"></a></div>
+    <div><a href="facebook.com"><img src="images/social_icons/facebook.png" class="img-fluid"></a></div>
+    <!--div><a href="g-plus.com"><img src="images/social_icons/g_plus.png" class="img-fluid"></a></div-->
+    <div><a href="skype.com"><img src="images/social_icons/skype.png" class="img-fluid"></a></div>
+    <div><a href="stumble-upon.com"><img src="images/social_icons/stumble_upon.png" class="img-fluid"></a>
+    </div>
+    <div><a href="behance.com"><img src="images/social_icons/behance.png" class="img-fluid"></a></div>
+    <div><a href="pinterest.com"><img src="images/social_icons/pinterest.png" class="img-fluid"></a></div>
+    <!--div><a href="flickr.com"><img src="images/social_icons/flickr.png" class="img-fluid"></a></div-->
+</div>
+<div class="footer">
+    <div>MOTIENO PIZZERIA</div>
+    <div>2021</div>
+</div>
+</div>
+
     
 <script src="js/scripts.js"></script>  
 </body>
