--- a/index.html
+++ b/index.html
@@ -26,13 +26,56 @@
 </head>
 <body>
     
-    <div class="topnav">
+    <!--div class="topnav">
         <a class="active" href="#home">Home</a>
         <a href="#offers">Offers</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
-      </div> 
+      </div--> 
       <div class="fluid-container">
+        <div class="container">
+            <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+              <i class="fas fa-pizza-slice just-pizza-icon"></i>
+              <a class="navbar-brand brand" href="#menu">MOTIENO PIZZERIA</a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#menu"
+                      >MENU<span class="sr-only"></span
+                    ></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./about.html">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contacts">CONTACTS</a>
+                  </li>
+                </ul>
+                <div class="cart-styles">
+                  <div class="cart-text">
+                    <span class="cart">
+                      <button
+                        type="button"
+                        data-toggle="modal"
+                        data-target="#cart-modal"
+                        class="btn btn-dark open-cart"
+                        value="Barbeque"
+                      >
+                       
+                </div>
+              </div>
+            </nav>
       <div class="pizzaImages">
         <div
           id="carouselExampleControls"
@@ -166,7 +209,7 @@
 </div>
 <div class="footer">
     <div>MOTIENO PIZZERIA</div>
-    <div>2021</div>
+    <div>2022</div>
 </div>
 </div>
 
