customer details modification

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
             </div>
             <div class="four col-md-3">
-                <label class="name">Customer Details: <!--input type="text" id="name"></label-->
+                <label class="customer">Customer Details: <!--input type="text" id="name"></label-->
                 <label class="name">Customer name: <input type="text" id="name"></label>
                 <label>Preferred delivery mode:
                     <select name="mode" id="mode">
@@ -187,7 +187,7 @@
                     </select></label>
 
                 <p><label>Delivery instructions: <textarea name="comments"></textarea></label></p>
-                <button onclick="data()">Submit order</button>
+                <button id="butt" onclick="data()">Submit Order</button>
             </div>
             <!--label class="name">Customer name: <input type="text" id="name"></label-->
         </div>
